src/objects/Dwolla_API_Connection__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to configure a connection to the Dwolla API. The API Wrapper uses org wide defaults only.</description>
    <fields>
        <fullName>API_Endpoint__c</fullName>
        <label>API Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OAuth_Endpoint__c</fullName>
        <label>OAuth Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OAuth_Key__c</fullName>
        <label>OAuth Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuth_Secret__c</fullName>
        <label>OAuth Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Dwolla API Connection</label>
</CustomObject>